--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,11 @@
 body{
     text-align: center;
-    font-family: arial;
-    color: green;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 #header{
-    background-color: gray;
-    color: greenyellow;
+    background-color: darkblue;
+    color: white;
     padding-top: 10px;
     padding-bottom: 10px;
     box-shadow: 2px 2px 5px #999;
