--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,7 @@ body{
 
 #header{
     background-color: darkblue;
-    color: white;
+    color: skyblue;
     padding-top: 10px;
     padding-bottom: 10px;
     box-shadow: 2px 2px 5px #999;
