Cambie el color del titulo y el segundo parrafo del primer post.

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,8 +4,8 @@ body{
 }
 
 #header{
-    background-color: darkblue;
-    color: white;
+    background-color: black;
+    color: orange;
     padding-top: 10px;
     padding-bottom: 10px;
     box-shadow: 2px 2px 5px #999;
